--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="&lt;webgatto&gt; Frontend Web Design">
-    <meta name="author" content="">
+    <meta name="author" content="César Gatto">
     <title>&lt;webgatto&gt;  Frontend Web Design</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
@@ -50,7 +50,7 @@
         <div class="overlay"></div>
         <div class="header-content container">
             <h1 class="header-title">
-                <span class="up">Olá, você!<br></span>
+                <span class="up">Seja bem-vindo!<br></span>
                 <span class="down">Sou César<br>Gatto,</span>
             </h1>
             <p class="header-subtitle">FRONTEND WEB DESIGNER</p>            
