--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <span class="up">Bem-vindos!<br></span>
                 <span class="down">Sou César<br>Gatto,</span>
             </h1>
-            <p class="header-subtitle">FRONTEND WEBDESIGNER</p>            
+            <p class="header-subtitle">FRONTEND WEB DESIGNER</p>            
 
             <!-- <button class="btn btn-primary">Visit My Works</button> -->
         </div>              
@@ -177,7 +177,7 @@
 
                       <!-- Modal -->
                       <div class="modal fade" id="web001" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-dialog modal-dialog-scrollable">
                           <div class="modal-content">
                             <div class="modal-header">
                               <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
@@ -216,7 +216,7 @@
 
                       <!-- Modal -->
                       <div class="modal fade" id="web002" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-dialog modal-dialog-scrollable">
                           <div class="modal-content">
                             <div class="modal-header">
                               <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
@@ -255,7 +255,7 @@
 
                       <!-- Modal -->
                       <div class="modal fade" id="web003" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-dialog modal-dialog-scrollable">
                           <div class="modal-content">
                             <div class="modal-header">
                               <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
@@ -299,7 +299,7 @@
 
                       <!-- Modal -->
                       <div class="modal fade" id="design001" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-dialog modal-dialog-scrollable">
                           <div class="modal-content">
                             <div class="modal-header">
                               <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
@@ -340,7 +340,7 @@
 
                       <!-- Modal -->
                       <div class="modal fade" id="design002" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-dialog modal-dialog-scrollable">
                           <div class="modal-content">
                             <div class="modal-header">
                               <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
@@ -380,7 +380,7 @@
 
                       <!-- Modal -->
                       <div class="modal fade" id="design003" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-dialog modal-dialog-scrollable">
                           <div class="modal-content">
                             <div class="modal-header">
                               <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
@@ -421,7 +421,7 @@
 
                       <!-- Modal -->
                       <div class="modal fade" id="design004" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-dialog modal-dialog-scrollable">
                           <div class="modal-content">
                             <div class="modal-header">
                               <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
@@ -464,7 +464,7 @@
 
                       <!-- Modal -->
                       <div class="modal fade" id="div001" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-dialog modal-dialog-scrollable">
                           <div class="modal-content">
                             <div class="modal-header">
                               <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
@@ -504,7 +504,7 @@
 
                       <!-- Modal -->
                       <div class="modal fade" id="div002" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-dialog modal-dialog-scrollable">
                           <div class="modal-content">
                             <div class="modal-header">
                               <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
@@ -544,7 +544,7 @@
 
                       <!-- Modal -->
                       <div class="modal fade" id="div003" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-dialog modal-dialog-scrollable">
                           <div class="modal-content">
                             <div class="modal-header">
                               <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
@@ -585,7 +585,7 @@
 
                       <!-- Modal -->
                       <div class="modal fade" id="div004" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-dialog modal-dialog-scrollable">
                           <div class="modal-content">
                             <div class="modal-header">
                               <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
@@ -626,7 +626,7 @@
 
                       <!-- Modal -->
                       <div class="modal fade" id="div005" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-dialog modal-dialog-scrollable">
                           <div class="modal-content">
                             <div class="modal-header">
                               <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
@@ -719,7 +719,7 @@
                             <p class="title_2">Alura</p>
                             <p class="subtitle">Cursando Front e Back-end pela escola online de tecnologia, Alura.</p>
                             <hr>
-                            <h6 class="title text-danger">Contos breves e Literatura</h6>
+                            <h6 class="title text-danger">Contos Breves e Literatura</h6>
                             <p class="title_2">Casa das Rosas</p>
                             <p class="subtitle">Curso de escrita criativa de curta duração pela Casa das Rosas.</p>
                             <hr>
