--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     de perto e sempre me interessei, meus pais perceberam e logo me matricularam em um curso de informática
                     na Microcamp. O curso foi bem legal até que fui apresentado ao HTML. Foi um caminho sem volta...<br>
                     Tive um caso de amor com HTML aos 14 anos de idade. Foi uma relação intensa que fez eu deixar de 
-                    fazer qualquer outra coisa que não fosse isso. Um nerd. Dediquei-me de mente, corpo e alma à esta linguagem, estudei
+                    fazer qualquer outra coisa que não fosse isso... um nerd. Dediquei-me de mente, corpo e alma à esta linguagem, estudei
                     tutoriais, mergulhei no código fonte de sites alheios, discuti em fóruns... até que dei um
                     tempo. Motivo: fui aprovado no concurso dos Correios aos 19.<br>
                     Alguém disse: <em>"Se você ama algo e abre mão disso e isto não volta, você está fazendo errado."</em><br>
