--- a/index.html
+++ b/index.html
@@ -175,35 +175,50 @@
                         </div>      
                     </div>
 
-                      <!-- Modal -->
-                      <div class="modal fade" id="web001" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-scrollable">
+                    <div class="modal fade" id="web001" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+                        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
                           <div class="modal-content">
                             <div class="modal-header">
-                              <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                              <h1 class="modal-title fs-5" id="exampleModalToggleLabel">Modal 1</h1>
                               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                                This is some placeholder content to show the scrolling behavior for modals. We use repeated line breaks to demonstrate how content can exceed minimum inner height, thereby showing inner scrolling. When content becomes longer than the predefined max-height of modal, content will be cropped and scrollable within the modal.
+                              Show a second modal and hide this one with the button below.
+                              <br><br><br><br>
+                              <br><br><br><br>
 
-                                <br><br><br>
-                                <br><br><br>
-                                <br><br><br>
-                                <br><br><br>
-                                <br><br><br>
-                                <br><br><br>
-                                <br><br><br>
-                                <br><br><br>
-                                <br><br><br>
-                                <br><br><br>
-                                <br><br><br>
-                                <br><br><br>
 
-                                This content should appear at the bottom after you scroll.
+
+                              Thats it!
+                            </div>
+                            <div class="modal-footer">
+                              <button class="btn btn-primary" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Open second modal</button>
                             </div>
                           </div>
                         </div>
                       </div>
+                      <div class="modal fade" id="exampleModalToggle2" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
+                        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <h1 class="modal-title fs-5" id="exampleModalToggleLabel2">Modal 2</h1>
+                              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                              Hide this modal and show the first with the button below.
+                            </div>
+                            <div class="modal-footer">
+                              <button class="btn btn-primary" data-bs-target="#web001" data-bs-toggle="modal">Back to first</button>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <button class="btn btn-primary" data-bs-target="#web001" data-bs-toggle="modal">Open first modal</button>
+
+
+
+
+
 
 
 
