--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <div class="body">
                             <img src="assets/imgs/frontend.png" alt="Ícone Frontend" class="icon">
                             <h6 class="title">Desenvolvimento Front-end</h6>
-                            <p class="subtitle">Apaixonado por HTML e CSS, desenvolvo páginas dinâmicas com os recursos mais atuais do mercado.</p>
+                            <p class="subtitle">Apaixonado por HTML e CSS, desenvolvo páginas dinâmicas e responsivas com os recursos mais atuais do mercado.</p>
                         </div>
                     </div>
                 </div>
@@ -120,7 +120,7 @@
                     <div class="service-card">
                         <div class="body">
                             <img src="assets/imgs/design.png" alt="Ícone Design" class="icon">
-                            <h6 class="title">Design</h6>
+                            <h6 class="title">Design Gráfico</h6>
                             <p class="subtitle">Não só apaixonado por tecnologia, mas também em trazer funcionalidade e estética visual.</p>
                         </div>
                     </div>
