--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
                 <div class="footer-icones">
                     <p class="texto-footer">Copyright <script>document.write(new Date().getFullYear())</script> &copy;<br>
                         <div class="icones m-auto ml-sm-auto">
-                            <a href="https://web.whatsapp.com/send?phone=5511971930964" target="_blank"><img src="assets/imgs/whatsapp.png" class="icone" alt="Ícone do Whatsapp"></a>
+                            <a href="https://wa.me/5511971930964" target="_blank"><img src="assets/imgs/whatsapp.png" class="icone" alt="Ícone do Whatsapp"></a>
                             <a href="mailto:cesargatto@gmail.com"><img src="assets/imgs/email.png" class="icone" alt="Ícone do Gmail"></a>
                             <a href="https://linkedin.com/in/césar-gatto-681babb9" target="_blank"><img src="assets/imgs/linkedin.png" class="icone" alt="Ícone do Linkedin"></a>
                                              
