--- a/index.html
+++ b/index.html
@@ -198,6 +198,20 @@
 
                     <div class="col-md-6 col-lg-4 web">
                         <div class="portfolio-item">
+                            <img src="assets/portifa/web_florigatto.jpg" class="img-fluid" alt="Landing Page da Florigatto">
+                            <div class="content-holder">
+                                <div class="text-holder">
+                                    <h6 class="title">Landing Page da Florigatto</h6>
+                                    <p class="subtitle">Trabalho que desenvolvi quando minha mãe resolveu abrir uma 
+                                        loja de plantas.
+                                    </p>
+                                </div>
+                            </div>   
+                        </div>             
+                    </div>
+
+                    <div class="col-md-6 col-lg-4 web">
+                        <div class="portfolio-item">
                             <img src="assets/portifa/web_aplicar.jpg" class="img-fluid" alt="Landing Page da APLICAR">
                             <div class="content-holder">
                                 <div class="text-holder">
