--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                                 <div class="text-holder">
                                     <h6 class="title">Página inicial / Antigo portfólio</h6>
                                     <p class="subtitle">Ferramentas utilizadas:<br>
-                                        Photoshop, Illustrator, HTML, CSS, JQuery.
+                                        Photoshop, Illustrator, HTML, CSS, JavaScript.
                                     </p>
                                 </div>
                             </div>   
@@ -187,9 +187,23 @@
                             <img src="assets/portifa/web_portifa_antigo02.jpg" class="img-fluid" alt="Meu antigo portfólio">
                             <div class="content-holder">
                                 <div class="text-holder">
+                                    <h6 class="title">Links / Antigo portfólio</h6>
+                                    <p class="subtitle">Ferramentas utilizadas:<br>
+                                        Photoshop, Illustrator, HTML, CSS, JavaScript.
+                                    </p>
+                                </div>
+                            </div>   
+                        </div>             
+                    </div>
+
+                    <div class="col-md-6 col-lg-4 web">
+                        <div class="portfolio-item">
+                            <img src="assets/portifa/web_portifa_antigo03.jpg" class="img-fluid" alt="Meu antigo portfólio">
+                            <div class="content-holder">
+                                <div class="text-holder">
                                     <h6 class="title">Rodapé / Antigo portfólio</h6>
                                     <p class="subtitle">Ferramentas utilizadas:<br>
-                                        Photoshop, Illustrator, HTML, CSS, JQuery.
+                                        Photoshop, Illustrator, HTML, CSS, JavaScript.
                                     </p>
                                 </div>
                             </div>   
@@ -320,6 +334,22 @@
                                         loja de plantas.<br>
                                         Ferramentas utilizadas:<br>
                                         Prancheta, Photoshop e Illustrator.
+                                    </p>
+                                </div>
+                            </div>   
+                        </div>             
+                    </div>
+
+                    <div class="col-md-6 col-lg-4 design">
+                        <div class="portfolio-item">
+                            <img src="assets/portifa/design_abba.png" class="img-fluid" alt="Logotipo da ÁbBA">
+                            <div class="content-holder">
+                                <div class="text-holder">
+                                    <h6 class="title">Logotipo / ÁbBA</h6>
+                                    <p class="subtitle">Trabalho que desenvolvi para uma entidade que cuida de jovens
+                                        autistas.<br>
+                                        Ferramentas utilizadas:<br>
+                                        Illustrator.
                                     </p>
                                 </div>
                             </div>   
