--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a class="link" href="#sobre">Sobre</a>
                 </li>
                 <li class="item">
-                    <a class="link" href="#portfolio">Portfolio</a>
+                    <a class="link" href="#portfolio">Portfólio</a>
                 </li>
                 <li class="item">
                     <a class="link" href="#curriculo">Currículo</a>
@@ -129,7 +129,7 @@
                     <div class="service-card">
                         <div class="body">
                             <img src="assets/imgs/escrita.png" alt="Ícone escrita criativa" class="icon">
-                            <h6 class="title">Escrita criativa</h6>
+                            <h6 class="title">Escrita Criativa</h6>
                             <p class="subtitle">Escrever é um hobby que eu tenho, mas posso agregar profissionalmente com um texto sucinto e objetivo.</p>
                         </div>
                     </div>
@@ -145,7 +145,7 @@
     <section class="section bg-custom-gray" id="portfolio">
 
             <div class="container text-center">
-                <h6 class="section-title mb-6">&lt;portfolio&gt;</h6>
+                <h6 class="section-title mb-6">&lt;portfólio&gt;</h6>
             <div class="portfolio">
                 <div class="filters">
                     <a href="#" data-filter=".web" class="active">
