--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                     ar livre, até mesmo quando era época de desenhar, e assim o fazia no banco da praça.<br>
                     Acompanhei o boom das novas tecnologias 
                     de perto e sempre me interessei, meus pais perceberam e logo me matricularam em um curso de informática
-                    na Microcamp. O curso foi desafiador e ao ser apresentado ao HTML... foi um caminho sem volta.<br>
+                    na Microcamp. O curso foi desafiador e ao ser apresentado ao HTML, foi um caminho sem volta.<br>
                     Tive um caso de amor com HTML aos 14 anos de idade. Foi uma relação intensa que fez eu deixar de 
-                    fazer qualquer outra coisa que não fosse isso... um nerd. Dediquei-me de mente, corpo e alma à esta linguagem, estudei
+                    fazer qualquer outra coisa que não fosse isso, um nerd. Dediquei-me de mente, corpo e alma à esta linguagem, estudei
                     tutoriais, mergulhei no código fonte de sites alheios, discuti em fóruns... até que dei um
                     tempo. Motivo: fui aprovado no concurso dos Correios aos 19.<br>
                     Alguém disse: <em>"Se você ama algo e abre mão disso e isto não volta, você está fazendo errado."</em><br>
