--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 
                     <div class="col-md-6 col-lg-4 design">
                         <div class="portfolio-item">
-                            <img src="assets/portifa/design_plug.jpg" class="img-fluid" alt="Marca Plug Session">
+                            <img src="assets/portifa/design_plug.png" class="img-fluid" alt="Marca Plug Session">
                             <div class="content-holder">
                                 <div class="text-holder">
                                     <h6 class="title">Marca / Plug Session</h6>
@@ -649,7 +649,11 @@
                             <p class="title_2">Plug Session</p>
                             <p class="subtitle">Desenvolvimento de vetor de logotipo, Landing Page e texto, desde a concepção do
                                 briefing até o acabamento final.
-                       
+                            </p>
+                            <hr>
+                            <h6 class="title text-danger">Dev. Logotipo</h6>
+                            <p class="title_2">ÁbBA</p>
+                            <p class="subtitle">Desenvolvimento de logotipo para uma entidade que cuida de jovens com autismo, ÁbBA.
                             </p>
                             <hr>
                             <h6 class="title text-danger">Dev. Landing Page</h6>
@@ -747,11 +751,11 @@
                             </div>
                             <h6>Illustrator</h6>
                             <div class="progress mb-3">
-                                <div class="progress-bar bg-dark" role="progressbar" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar bg-dark" role="progressbar" style="width: 85%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                             <h6>Indesign</h6>
                             <div class="progress mb-3">
-                                <div class="progress-bar bg-dark" role="progressbar" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar bg-dark" role="progressbar" style="width: 85%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                             <h6>PHP</h6>
                             <div class="progress mb-3">
@@ -777,7 +781,7 @@
                             </div>
                             <h6>Inglês</h6>
                             <div class="progress mb-3">
-                                <div class="progress-bar bg-dark" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar bg-dark" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                     </div>
