--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <div class="body">
                             <img src="assets/imgs/frontend.png" alt="Ícone Frontend" class="icon">
                             <h6 class="title">Desenvolvimento Front-end</h6>
-                            <p class="subtitle">Apaixonado por HTML e CSS, desenvolvo páginas dinâmicas e responsivas com os recursos mais atuais do mercado.</p>
+                            <p class="subtitle">Apaixonado por Web e tecnologia, desenvolvo sites dinâmicos e responsivos para a internet.</p>
                         </div>
                     </div>
                 </div>
