--- a/index.html
+++ b/index.html
@@ -489,6 +489,22 @@
 
                     <div class="col-md-6 col-lg-4 diversos">
                         <div class="portfolio-item">
+                            <img src="assets/portifa/div_finofiction.jpg" class="img-fluid" alt="Blog Fino Fiction">
+                            <div class="content-holder">
+                                <div class="text-holder">
+                                    <h6 class="title">Blog / Fino Fiction</h6>
+                                    <p class="subtitle">Este é meu blog, onde escrevo histórias fictícias com pitadas de realidade.<br>
+                                        <u>https://finofiction.wordpress.com</u><br>
+                                        Ferramentas utilizadas:<br>
+                                        WordPress
+                                    </p>
+                                </div>
+                            </div>   
+                        </div>             
+                    </div>
+
+                    <div class="col-md-6 col-lg-4 diversos">
+                        <div class="portfolio-item">
                             <img src="assets/portifa/div_conexao.jpg" class="img-fluid" alt="Portal Conexão Virtual">
                             <div class="content-holder">
                                 <div class="text-holder">
@@ -763,7 +779,7 @@
                             </div>
                             <h6>MySQL</h6>
                             <div class="progress mb-3">
-                                <div class="progress-bar bg-dark" role="progressbar" style="width: 70%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar bg-dark" role="progressbar" style="width: 60%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                     </div>
